# promptory

./: .gitignore  .rules  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/commands/: gh-issue  memlog  review-branch  review-code
dev-docs/: ARCHITECTURE.md
docs/: faq.md  tutorial.md
examples/: evals.py  evals2.py  lifecycle.py  sidecar.sh
scripts/: gh-issue  memlog  review-code
src/promptkit/: __init__.py  cli.py  config.py  diff.py  errors.py  lint.py  manager.py  metadata.py  release.py  render.py  serve.py  store.py
src/promptory/: __init__.py  cli.py  config.py  diff.py  errors.py  evidence.py  gates.py  lint.py  manager.py  metadata.py  output.py  release.py  render.py  serve.py  store.py
tests/: test_cli.py  test_config.py  test_diff.py  test_evidence.py  test_evidence_compare.py  test_gates.py  test_integrity.py  test_manager.py  test_release.py  test_render.py  test_serve.py  test_store.py
