[project]
name = "promptkit"
version = "0.1.0"
description = "Git-Based Prompt Versioning System"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "jinja2>=3.1.0",
  "pyyaml>=6.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[dependency-groups]
dev = [
  "prek>=0.2.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "ty>=0.0.1a1",
]

[project.scripts]
prompt = "promptkit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptkit"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.claude",
  "/.DS_Store",
  "/.github",
  "/.pytest_cache",
  "/.venv",
  "/AGENTS.md",
  "/CLAUDE.md",
  "/CODEX.md",
  "/GEMINI.md",
  "/MEMORY.md",
  "/MEMORY_LOG.md",
  "/dev-docs",
  "/dist",
]

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py314"
src = ["src"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
