[project]
name = "promptory"
version = "0.1.0"
description = "Git-Based Prompt Versioning System"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [
  { name = "Huascar Sanchez" },
]
keywords = ["llm", "prompts", "prompt-management", "jinja", "versioning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Version Control",
  "Typing :: Typed",
]
dependencies = [
  "jinja2>=3.1.0",
  "pyyaml>=6.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
serve = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/hsanchez/promptory"
Repository = "https://github.com/hsanchez/promptory"
Issues = "https://github.com/hsanchez/promptory/issues"

[dependency-groups]
dev = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "prek>=0.2.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "ty>=0.0.1a1",
  "uvicorn>=0.30.0",
]

[project.scripts]
prompt = "promptory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptory"]
artifacts = ["src/promptory/py.typed"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.claude",
  "/.github",
  "/.rules",
  "/AGENTS.md",
  "/CLAUDE.md",
  "/CODEX.md",
  "/GEMINI.md",
  "/scripts",
  "/dev-docs",
  "/docs",
]

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py313" # to avoid stripping `(` and `)` when having multiple exceptions
src = ["src"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
